Blender Crashes on toggling modes, dynatopo sculpt/object mode. #34473

Closed
opened 2013-02-28 15:30:49 +01:00 by Jonathan Mielke · 14 comments

%%%Tested on:
Windows xp 32 bit, using release 2.66 and trunk revision 54919
Ubuntu 12.04 (precise) 32-bit, using release 2.66 and trunk revision 54898

Start in the default setup/factory settings, select the cube, then go into sculpt mode and enable dynatopo, draw for about 1-5 secs. Now toggle back to object mode(without disabling dynatopo) and then press ctrl-z twice (i.E. undo), Then switch back to object mode once again for crash. %%%

%%%Tested on: Windows xp 32 bit, using release 2.66 and trunk revision 54919 Ubuntu 12.04 (precise) 32-bit, using release 2.66 and trunk revision 54898 Start in the default setup/factory settings, select the cube, then go into sculpt mode and enable dynatopo, draw for about 1-5 secs. Now toggle back to object mode(without disabling dynatopo) and then press ctrl-z twice (i.E. undo), Then switch back to object mode once again for crash. %%%

Changed status to: 'Open'

Changed status to: 'Open'
Member

%%%Works ok for me. In 2.66 release, and in current svn... (64 bits, OSX). It goes back into sculpt mode for me.
However, I do get one undo step where the cube draws without any subdivision, further undo steps show subdivisions again.

More testing needed - rule out something in your system, was this Win XP and Ubuntu test both on same computer? Which graphics card?%%%

%%%Works ok for me. In 2.66 release, and in current svn... (64 bits, OSX). It goes back into sculpt mode for me. However, I do get one undo step where the cube draws without any subdivision, further undo steps show subdivisions again. More testing needed - rule out something in your system, was this Win XP and Ubuntu test both on same computer? Which graphics card?%%%

%%%Win7 64 blender 2.66 r54834 64bit
Same behaviors as described by reporter and Ton. Crash respectively coming back to subdidivided cube without crashing then.
Here a GeForce GTX 550Ti with driver version 306.97.%%%

%%%Win7 64 blender 2.66 r54834 64bit Same behaviors as described by reporter and Ton. Crash respectively coming back to subdidivided cube without crashing then. Here a GeForce GTX 550Ti with driver version 306.97.%%%

%%%It's two different computers.
The xp has a Nivida gt 400, driver version 314.07
The Ubuntu I'm not sure what type of video card..probably integrated.

Video link to the steps it takes to crash.
http://www.youtube.com/watch?v=MMCTVCaf_xY%%%

%%%It's two different computers. The xp has a Nivida gt 400, driver version 314.07 The Ubuntu I'm not sure what type of video card..probably integrated. Video link to the steps it takes to crash. http://www.youtube.com/watch?v=MMCTVCaf_xY%%%

%%%Just tested on another computer:
Windows Vista 32 bit
geforce 6100 nForce 405
drivers 306.97

Will be able to access some 64 bit computers later, to test and see if it is limited to 32 bit platforms.%%%

%%%Just tested on another computer: Windows Vista 32 bit geforce 6100 nForce 405 drivers 306.97 Will be able to access some 64 bit computers later, to test and see if it is limited to 32 bit platforms.%%%

%%%I just tested on a Mac
using blender 2.66
OS X 10.8.2
NVIDIA GeForce GTX 675MX
16 GB 1600 MHz DDR3

And it still crashes....%%%

%%%I just tested on a Mac using blender 2.66 OS X 10.8.2 NVIDIA GeForce GTX 675MX 16 GB 1600 MHz DDR3 And it still crashes....%%%

%%%Confirmed here, Windows 7 x64, SVN 54991. %%%

%%%Confirmed here, Windows 7 x64, SVN 54991. %%%

%%%fixed r55007%%%

%%%fixed r55007%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

%%%Yep that fixed it, thanks!

However, I can still get it to crash with toggling between modes sometimes (you have toggle between modes/and sculpt a lot before you get a crash), I have not found any re-produceable steps so far...%%%

%%%Yep that fixed it, thanks! However, I can still get it to crash with toggling between modes sometimes (you have toggle between modes/and sculpt a lot before you get a crash), I have not found any re-produceable steps so far...%%%

%%%This has not been successfully fixed. Like the official release, r55007 causes an instant crash every time I enable dynatopo on my school laptop. HP/Compaq nc6320 (Windows 7 Enterprise, 32 bit - Intel CPU1.83Ghz, 2.5 Gb RAM).

Crash dumped as:

Blender 2.66 (sub 0), Revision: 55007

bpy.ops.sculpt.sculptmode_toggle() # Operator%%%

%%%This has not been successfully fixed. Like the official release, r55007 causes an instant crash every time I enable dynatopo on my school laptop. HP/Compaq nc6320 (Windows 7 Enterprise, 32 bit - Intel CPU1.83Ghz, 2.5 Gb RAM). Crash dumped as: # Blender 2.66 (sub 0), Revision: 55007 bpy.ops.sculpt.sculptmode_toggle() # Operator%%%

%%%Update: Crash fixed with newer graphics driver download.%%%

%%%Update: Crash fixed with newer graphics driver download.%%%

%%%Well I found reprodaceable steps that makes blender crash and it's pretty similar to what you had to do to make it crash in the orginal bug report.
This has been tested on:
Ubuntu
Windows 7
Windows xp
Mac osx
and each one of those is a different computer.

Here's the new steps to make it crash:

Enter sculpt mode
enable dynamic topology
draw a line on cube
switch to object mode
undo
undo
switch back to object mode (since we were put back in sculpt mode when we did the undos)
undo
undo
undo

and then crash%%%

%%%Well I found reprodaceable steps that makes blender crash and it's pretty similar to what you had to do to make it crash in the orginal bug report. This has been tested on: Ubuntu Windows 7 Windows xp Mac osx and each one of those is a different computer. Here's the new steps to make it crash: Enter sculpt mode enable dynamic topology draw a line on cube switch to object mode undo undo switch back to object mode (since we were put back in sculpt mode when we did the undos) undo undo undo and then crash%%%

%%%Edit: Forgot to mention that my latest round of testing was done on blender 2.66a%%%

%%%Edit: Forgot to mention that my latest round of testing was done on blender 2.66a%%%
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#34473
No description provided.