fix [#34473] Blender Crashes on toggling modes, dynatopo sculpt/object mode.